# kompass-core

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  log.ini  pyproject.toml  setup.py
.github/workflows/: build_and_deploy.yml  build_and_deploy_aarch64.yml  build_and_deploy_x86_64.yml  build_gpu_wheels.yml  create_release.yml  test_gpgpu_install.yml  test_gpu_install.yml
build_dependencies/: build_gpu_wheel.sh  install_gpu.sh  install_linux.sh  repair_gpu_wheel.sh
docs/: README.ja.md  README.zh.md
src/kompass_core/: __init__.py  calibration.py  models.py  motion_cost.py  performance.py  simulation.py  vision.py
src/kompass_core/algorithms/: __init__.py  dvz.py
src/kompass_core/control/: __init__.py  _base_.py  _trajectory_.py  dvz.py  dwa.py  pure_pursuit.py  rgb_follower.py  rgbd_follower.py  sensor_based_control.py  stanley.py  vision_dwa.py  vision_follower.py
src/kompass_core/datatypes/: __init__.py  laserscan.py  obstacles.py  path.py  pointcloud.py  pose.py  scan_model.py  vision.py
src/kompass_core/mapping/: __init__.py  bresenham.py  grid.py  laserscan_model.py  local_mapper.py  scan_model.py
src/kompass_core/py_path_tools/: __init__.py  executor.py  interpolation.py
src/kompass_core/utils/: base_attrs.py  common.py  emergency_stop.py  geometry.py  visualization.py
src/kompass_cpp/: CMakeLists.txt
src/kompass_cpp/benchmarks/: CMakeLists.txt  README.md  benchmark_common.h  benchmark_runner.cpp  plot_benchmarks.py
src/kompass_cpp/bindings/: CMakeLists.txt  bindings.cpp  bindings_config.cpp  bindings_control.cpp  bindings_gpu.cpp  bindings_mapping.cpp  bindings_planning.cpp  bindings_types.cpp  bindings_utils.cpp  bindings_vision.cpp
src/kompass_cpp/kompass_cpp/: CMakeLists.txt
src/kompass_cpp/kompass_cpp/include/controllers/: controller.h  dwa.h  follower.h  pid.h  pure_pursuit.h  rgb_follower.h  rgbd_follower.h  stanley.h  vision_dwa.h  vision_follower.h
src/kompass_cpp/kompass_cpp/include/datatypes/: control.h  parameter.h  path.h  tracking.h  trajectory.h
src/kompass_cpp/kompass_cpp/include/mapping/: line_drawing.h  local_mapper.h  local_mapper_gpu.h
src/kompass_cpp/kompass_cpp/include/planning/: ompl.h
src/kompass_cpp/kompass_cpp/include/utils/: angles.h  collision_check.h  collision_check_fcl.h  cost_evaluator.h  critical_zone_check.h  critical_zone_check_gpu.h  gpu_check.h  kalman_filter.h  logger.h  pointcloud.h  spline.h  threadpool.h  trajectory_sampler.h  transformation.h
src/kompass_cpp/kompass_cpp/include/vision/: depth_detector.h  tracker.h
src/kompass_cpp/kompass_cpp/src/: bindings.cpp
src/kompass_cpp/kompass_cpp/src/bindings/: bindings.cpp  bindings_config.cpp  bindings_control.cpp  bindings_gpu.cpp  bindings_mapping.cpp  bindings_mapping_gpu.cpp  bindings_types.cpp  bindings_utils.cpp
src/kompass_cpp/kompass_cpp/src/controllers/: controller.cpp  dwa.cpp  follower.cpp  pid.cpp  pure_pursuit.cpp  rgb_follower.cpp  rgbd_follower.cpp  stanley.cpp  vision_dwa.cpp  vision_follower.cpp
src/kompass_cpp/kompass_cpp/src/datatypes/: path.cpp
src/kompass_cpp/kompass_cpp/src/mapping/: local_mapper.cpp  local_mapper_gpu.cpp
src/kompass_cpp/kompass_cpp/src/planning/: ompl.cpp
src/kompass_cpp/kompass_cpp/src/utils/: angles.cpp  collision_check.cpp  collision_check_fcl.cpp  cost_evaluator.cpp  cost_evaluator_gpu.cpp  critical_zone_check.cpp  critical_zone_check_gpu.cpp  gpu_check.cpp  kalman_filter.cpp  trajectory_sampler.cpp  transformation.cpp
src/kompass_cpp/kompass_cpp/src/vision/: depth_detector.cpp  tracker.cpp
src/kompass_cpp/tests/: CMakeLists.txt  collisions_test.cpp  collisions_test_gpu.cpp  controller_test.cpp  controller_test_helpers.h  cost_evaluator_test.cpp  critical_zone_test.cpp  critical_zone_test_gpu.cpp  dwa_test.cpp  json_export.cpp  json_export.h  mapper_test.cpp  mapper_test_gpu.cpp  pointcloud_scan_plt.py  pointcloud_test.cpp  pure_pursuit_test.cpp  test.cpp  test.h  trajectory_sampler_plt.py  trajectory_sampler_test.cpp  vision_detector_test.cpp  vision_dwa_fixture_test.cpp  vision_dwa_test.cpp  vision_follower_fixture_test.cpp  vision_follower_test.cpp  vision_tracking_test.cpp
src/ompl/: CMakeLists.txt
src/ompl/src/: bindings.cpp
src/ompl_bindings/: CMakeLists.txt  bindings.cpp
tests/: test_controllers.py  test_cost_parity.py  test_depth_detector.py  test_fcl.py  test_laserscan.py  test_laserscan_emergency_stop.py  test_local_mapper_bindings.py  test_local_mapper_pytest.py  test_ompl.py  test_pointcloud_data.py  test_vision_dwa_follower.py  test_vision_follower.py
tests/resources/control/: bag_image_depth.tif  global_path.json  global_path_2.json  global_path_y.json
tests/resources/fcl/: ref_results.json
tests/resources/mapping/: laserscan_data.json  livox_pointcloud_sample_1.json
tests/resources/ompl/: map_meta.json  test_results.csv  test_results_geometric_ref.csv  testing_params.yaml  turtlebot_map.npy
tests/resources/vision_follower/: generate_fixtures.py
