[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kompass_core"
dynamic = ["version"]
description = "Navigation Algorithms for Kompass"
authors = [{ name = "Automatika Robotics", email = "contact@automatikarobotics.com" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]
license = { text = "MIT" }

keywords = ["robotics", "robots", "navigation", "control", "planning", "mapping"]

dependencies = [
    "numpy<=1.26.4",
    "numpy-quaternion>=2023.0.3",
    "python-fcl-fork",
    "pybind11",
    "omegaconf",
    "attrs>=23.2.0",
    "pyyaml",
    "scipy",
    "matplotlib",
    "pandas",
]

requires-python = ">=3.8.4,<3.13"

[project.optional-dependencies]
dev = ["pip-tools", "pytest==8.0.0", "pre-commit"]

[project.urls]
Homepage = "https://github.com/automatika-robotics/kompass-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests"
]
python_files = 'test*.py'

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.ruff]
extend-exclude = [".mypy_cache", ".tox", ".venv", "buck-out", "build", ".pytest_cache"]
fix = true
line-length = 88
preview = true
[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "F403", "F401"]
select = ["B","C","E","F","W","B9"]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.bumpver]
current_version = "0.4.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "(chore) Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"setup.py" = [
    "{version}",
]

[tool.cibuildwheel]
skip = ["pp*", "*musllinux*"]
test-requires = "pytest"
test-command = "pytest {package}/tests/test_fcl.py"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
environment = {VCPKG_ROOT="/project/deps/vcpkg", LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$VCPKG_ROOT/installed/x64-linux/lib:$VCPKG_ROOT/installed/arm64-linux/lib"}
before-all = "bash build_dependencies/install_linux.sh"
archs = ["x86_64"]
